--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -12,9 +12,10 @@
     "auth": {
         "rolesSource": "/api/GetRoles",
         "identityProviders": {
+            "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
             "azureActiveDirectory": {
                 "registration": {
-                    "openIdIssuer": "https://login.microsoftonline.com/0ae51e19-07c8-4e4b-bb6d-648ee58410f4/v2.0",
+                    "openIdIssuer": "https://login.microsoftonline.com/0ae51e19-07c8-4e4b-bb6d-648ee58410f4",
                     "clientIdSettingName": "AZURE_CLIENT_ID",
                     "clientSecretSettingName": "AZURE_CLIENT_SECRET"
                 },
